[package]
name = "solver_cp"
version = "0.1.0"
authors = ["vigneron <vincent.vigneron@univ-angers.fr>"]

[[bin]]
doc = false
name = "solver"
path = "src/main.rs"

[dependencies]
snowflake = "1.3.0"

[badges]
travis-ci = { repository = "Razican/vsop87-rs", branch = "master" }
codecov = { repository = "Razican/vsop87-rs", branch = "master", service = "github" }
