[package]
name = "crusp"
version = "0.1.0"
authors = ["vigneron <vincent.vigneron@univ-angers.fr>"]

[dependencies]
snowflake = "1.3.0"
rand = "0.4.2"

[badges]
travis-ci = { repository = "Razican/vsop87-rs", branch = "master" }
codecov = { repository = "Razican/vsop87-rs", branch = "master", service = "github" }
