[package]
name = "crusp-derive-graph"
version = "0.1.0"
authors = ["Vincent"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/progress.rs"

[dev-dependencies]
trybuild = "1.0"

[dependencies]
syn = { version = "0.15.0", features = ["extra-traits","visit-mut", "full"] }
quote = { version = "0.6" }
proc-macro2 = { version = "0.2.3" }
crusp-graph = { path="../crusp_graph" }
